// Vitest Snapshot v1

exports[`/game/new route > displays error game is restricted 1`] = `
<body>
  <div>
     
    <main
      class="s-1rlJbZ_1rgK_"
    >
      <header
        class="s-c1MG4BWNDc59"
      >
        <nav
          class="s-c1MG4BWNDc59"
        >
          <span
            class="s-c1MG4BWNDc59"
          >
            <ol
              class="s-x5nEMCoiqeIy"
            >
              <li
                class="s-x5nEMCoiqeIy"
              >
                <a
                  class="s-x5nEMCoiqeIy"
                  href="/"
                >
                  Accueil
                </a>
              </li>
               
              <li
                class="s-x5nEMCoiqeIy"
              >
                &gt;
              </li>
              
              <li
                class="s-x5nEMCoiqeIy"
              >
                <a
                  class="s-x5nEMCoiqeIy"
                >
                  Nouvelle partie
                </a>
              </li>
               
              
            </ol>
            
            <!--&lt;Breadcrumb&gt;-->
          </span>
           
          <button
            class="secondary s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              account_circle
            </span>
            
            
            
          </button>
          <!--&lt;Button&gt;-->
        </nav>
         
        <div
          class="s-c1MG4BWNDc59"
        />
      </header>
      <!--&lt;Header&gt;-->
       
      <section
        class="s-1rlJbZ_1rgK_"
      >
        <p
          class="s-1rlJbZ_1rgK_"
        >
          Ce jeu n'est pas accessible.
        </p>
         
        <a
          class="s-1rlJbZ_1rgK_"
          href="/home"
        >
          <button
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              arrow_back
            </span>
            
            <span
              class="text s-NMyTiX1zi6rz"
            >
              Accueil
            </span>
            
            
          </button>
          <!--&lt;Button&gt;-->
        </a>
      </section>
    </main>
    <!--&lt;+page&gt;-->
  </div>
</body>
`;

exports[`/game/new route > displays error when too many games where created 1`] = `
<body>
  <div>
     
    <main
      class="s-1rlJbZ_1rgK_"
    >
      <header
        class="s-c1MG4BWNDc59"
      >
        <nav
          class="s-c1MG4BWNDc59"
        >
          <span
            class="s-c1MG4BWNDc59"
          >
            <ol
              class="s-x5nEMCoiqeIy"
            >
              <li
                class="s-x5nEMCoiqeIy"
              >
                <a
                  class="s-x5nEMCoiqeIy"
                  href="/"
                >
                  Accueil
                </a>
              </li>
               
              <li
                class="s-x5nEMCoiqeIy"
              >
                &gt;
              </li>
              
              <li
                class="s-x5nEMCoiqeIy"
              >
                <a
                  class="s-x5nEMCoiqeIy"
                >
                  Nouvelle partie
                </a>
              </li>
               
              
            </ol>
            
            <!--&lt;Breadcrumb&gt;-->
          </span>
           
          <button
            class="secondary s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              account_circle
            </span>
            
            
            
          </button>
          <!--&lt;Button&gt;-->
        </nav>
         
        <div
          class="s-c1MG4BWNDc59"
        />
      </header>
      <!--&lt;Header&gt;-->
       
      <section
        class="s-1rlJbZ_1rgK_"
      >
        <p
          class="s-1rlJbZ_1rgK_"
        >
          Vous avez déjà 6 parties en cours, vous ne pouvez pas en créer davantage.
        </p>
         
        <a
          class="s-1rlJbZ_1rgK_"
          href="/home"
        >
          <button
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              arrow_back
            </span>
            
            <span
              class="text s-NMyTiX1zi6rz"
            >
              Accueil
            </span>
            
            
          </button>
          <!--&lt;Button&gt;-->
        </a>
      </section>
    </main>
    <!--&lt;+page&gt;-->
  </div>
</body>
`;
